fixing rules that tell stepper-item header and content divs to stretch the full width of the parent grid regardless if they're selected or not

--- a/packages/calcite-components/src/components/stepper-item/stepper-item.scss
+++ b/packages/calcite-components/src/components/stepper-item/stepper-item.scss
@@ -283,14 +283,14 @@
   }
 }
 
-:host([layout="horizontal-single"][selected]) {
+:host([layout="horizontal-single"]) {
   .stepper-item-header {
     grid-area: 1 / 1 / 1 / -1;
   }
 }
 
-:host([layout="horizontal"][selected]),
-:host([layout="horizontal-single"][selected]) {
+:host([layout="horizontal"]),
+:host([layout="horizontal-single"]) {
   .stepper-item-content {
     grid-area: 2 / 1 / 2 / -1;
   }
